--- a/Cutting Web/index.html
+++ b/Cutting Web/index.html
@@ -83,8 +83,7 @@
                                     <p><span class="orange">Phone:</span> (+1) 6 88 43 59 71</p >
                                     <p><span class="orange">Email:</span> samidoe@infos.com</p >
                                     <p><span class="orange">Address:</span> 15, Beverly Hills, New York</p >
-                                    <p><span class="orange">Social Media:</span><i class="fa-brands fa-facebook-f"></i><i class="fa-brands fa-twitter"></i><i class="fa-brands fa-dribbble"></i><i class="fa-brands fa-behance"></i><i class="fa-brands fa-codepen"></i></p >
-                                    <i class="fa-regular fa-credit-card fa-2xl credit_card"></i>
+                                    <p><span class="orange">Social Media:</span><a class="fa-brands fa-facebook-f white" href="!#"></a><a class="fa-brands fa-twitter white" href="!#"></a><a class="fa-brands fa-dribbble white" href="!#"></a><a class="fa-brands fa-behance white" href="!#"></a><a class="fa-brands fa-codepen white" href="!#"><a class="fa-regular fa-credit-card fa-2xl credit_card white" href="!#"></a>
                                 </div>
                                 <div class="inner">
                                     <a href="!#" class="btns">VIEW MORE PROJECT</a>
@@ -135,10 +134,10 @@
                     </div>
                 </div>
             </div>
-            <!-- End Ssection 3 -->
+            <!-- End Section 3 -->
 
-            <!-- Start Ssection 4 -->
-            <div class="hero">
+            <!-- Start Section 4 -->
+            <div class="hero black">
                 <div class="cmpt-4">
                     <div class="container">
                         <div class="row">
@@ -196,7 +195,204 @@
                     </div>
                 </div>    
             </div>
-            <!-- End Ssection 4 -->
+            <!-- End Section 4 -->
+
+            <!-- Start Section 5 -->
+            <div class="hero grey">
+                <div class="cmpt-5">
+                    <div class="container">
+                        <div class="row">
+                            <div class="card__title-big white">My <span class="orange">Skills </span></div>
+                            <div class="col-1-3">
+                                <div class="card">
+                                    <i class="fa-solid fa-heart fa-2xl" style="color: #e79c41;"></i><a>01</a>  
+                                    <p class="white medium">Retina Ready</p>
+                                    <p class="white medium">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent pulvinar.</p>
+                                </div>
+                            </div>
+                            <div class="col-1-3">
+                                <div class="card">
+                                    <span class="white small" style="padding-right: 210px;">Web Development</span><span class="white small">90%</span>
+                                    <div class="progress-item">
+                                        <div class="progress-container">
+                                            <div class="progress"></div>
+                                            <div class="progress-complete" style="width: 90%;"></div>
+                                        </div>
+                                    </div>
+                                    <span class="white small" style="padding-right: 60px;">Wordpress, Joomla, Ruby, Python</span><span class="white small">70%</span>
+                                    <div class="progress-item">
+                                        <div class="progress-container">
+                                            <div class="progress"></div>
+                                            <div class="progress-complete" style="width: 72%;"></div>
+                                        </div>
+                                    </div>  
+                                </div>
+                            </div>
+                            <div class="col-1-3">
+                                <div class="card">
+                                    <span class="white small" style="padding-right: 290px;">SEO</span><span class="white small">90%</span>
+                                    <div class="progress-item">
+                                        <div class="progress-container">
+                                            <div class="progress"></div>
+                                            <div class="progress-complete" style="width: 90%;"></div>
+                                        </div>
+                                    </div>
+                                    <span class="white small" style="padding-right: 130px;">Google Adward, Facebook</span><span class="white small">80%</span>
+                                    <div class="progress-item">
+                                        <div class="progress-container">
+                                            <div class="progress"></div>
+                                            <div class="progress-complete" style="width: 80%;"></div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-1-3">
+                                <div class="card">
+                                    <span class="white small" style="padding-right: 260px;">Marketing</span><span class="white small">90%</span>
+                                    <div class="progress-item">
+                                        <div class="progress-container">
+                                            <div class="progress"></div>
+                                            <div class="progress-complete" style="width: 90%;"></div>
+                                        </div>
+                                    </div>
+                                    <span class="white small" style="padding-right: 182px;">Consulting</span><span class="white small">70%</span>
+                                    <div class="progress-item">
+                                        <div class="progress-container">
+                                            <div class="progress"></div>
+                                            <div class="progress-complete" style="width: 70%;"></div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-1-3">
+                                <div class="card">
+                                    <span class="white small" style="padding-right: 265px;">Branding</span><span class="white small">90%</span>
+                                    <div class="progress-item">
+                                        <div class="progress-container">
+                                            <div class="progress"></div>
+                                            <div class="progress-complete" style="width: 90%;"></div>
+                                        </div>
+                                    </div>
+                                    <span class="white small" style="padding-right: 235px;">After Effect</span><span class="white small">85%</span>
+                                    <div class="progress-item">
+                                        <div class="progress-container">
+                                            <div class="progress"></div>
+                                            <div class="progress-complete" style="width: 85%;"></div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-1-3">
+                                <div class="card">
+                                    <i class="fa-brands fa-drupal fa-2xl" style="color: #e79c41;"></i><a>02</a>  
+                                    <p class="white medium">Retina Ready</p>
+                                    <p class="white medium">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent pulvinar.</p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <!-- End Ssection 5 -->
+
+            <!-- Start Section 6 -->
+            <div class="hero background">
+                <div class="cmpt-6">
+                    <div class="container">
+                        <div class="row">
+                            <div class="col-1-4">
+                                <div class="card">
+                                    <p class="big">763</p>
+                                    <div class="color_card">
+                                        <p class="small">Team Member</p>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-1-4">
+                                <div class="card">
+                                    <p class="big">353</p>
+                                    <div class="color_card">
+                                        <p class="small">Team Member</p>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-1-4">
+                                <div class="card">
+                                    <p class="big">563</p>
+                                    <div class="color_card">
+                                        <p class="small">Team Member</p>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-1-4">
+                                <div class="card">
+                                    <p class="big">63</p>
+                                    <div class="color_card">
+                                        <p class="small">Team Member</p>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <!-- End Section 6 -->
+
+            <!-- Start Section 7 -->
+            <div class="hero">
+                <div class="cmpt-7">
+                    <div class="container">
+                        <div class="row">
+                            <div class="card__title-big white">My <span class="orange">Works </span></div>
+                            <div class="col-1-3">
+                                <div class="card">
+                                    <a href="!#">
+                                        <img src="https://j4demo2.ltheme.com/joomla/lt-mypro/images/spsimpleportfolio/development-1/p7_600x600.jpg#joomlaImage://local-images/spsimpleportfolio/development-1/p7_600x600.jpg?       " alt="">
+                                    </a>
+                                </div>
+                            </div>
+                            <div class="col-1-3">
+                                <div class="card">
+                                    <a href="!#">
+                                        <img src="https://j4demo2.ltheme.com/joomla/lt-mypro/images/spsimpleportfolio/development-1/7_600x600.jpg#joomlaImage://local-images/spsimpleportfolio/development-1/7_600x600.jpg?" alt="">
+                                    </a>
+                                </div>
+                            </div>
+                            <div class="col-1-3">
+                                <div class="card">
+                                    <a href="!#">
+                                        <img src="https://j4demo2.ltheme.com/joomla/lt-mypro/images/spsimpleportfolio/web-design/p3_600x600.jpg#joomlaImage://local-images/spsimpleportfolio/web-design/p3_600x600.jpg?" alt="">
+                                    </a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col-1-3">
+                                <div class="card">
+                                    <a href="!#">
+                                        <img src="https://j4demo2.ltheme.com/joomla/lt-mypro/images/spsimpleportfolio/seo-1/p4_600x600.jpg#joomlaImage://local-images/spsimpleportfolio/seo-1/p4_600x600.jpg?" alt="">
+                                    </a>
+                                </div>
+                            </div>
+                            <div class="col-1-3">
+                                <div class="card">
+                                    <a href="!#">
+                                        <img src="https://j4demo2.ltheme.com/joomla/lt-mypro/images/spsimpleportfolio/development-2/p5_600x600.jpg#joomlaImage://local-images/spsimpleportfolio/development-2/p5_600x600.jpg?" alt="">
+                                    </a>
+                                </div>
+                            </div>
+                            <div class="col-1-3">
+                                <div class="card">
+                                    <a href="!#">
+                                        <img src="https://j4demo2.ltheme.com/joomla/lt-mypro/images/spsimpleportfolio/web-design-1/p6_600x600.jpg#joomlaImage://local-images/spsimpleportfolio/web-design-1/p6_600x600.jpg?" alt="">
+                                    </a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <!-- End Section 7 -->
         </section>
         <!-- End main -->
 
