--- a/20230622CuttingWeb/index.html
+++ b/20230622CuttingWeb/index.html
@@ -402,79 +402,85 @@
                         <div class="row">
                             <div class="col-xl-4 col-lg-6 col-md-12">
                                 <div class="image-container">
-                                    <div class="image" style="background-image: url(https://j4demo2.ltheme.com/joomla/lt-mypro/images/spsimpleportfolio/development-1/p7_600x600.jpg#joomlaImage://local-images/spsimpleportfolio/development-1/p7_600x600.jpg?);"></div>
-                                    <div class="overlay">
-                                        <div class="btn-group-center">
-                                            <a href="#!" class="btn">ZOOM</a>
-                                            <a href="#!" class="btn">VIEW</a>
+                                    <div class="image" style="background-image: url(https://j4demo2.ltheme.com/joomla/lt-mypro/images/spsimpleportfolio/development-1/p7_600x600.jpg#joomlaImage://local-images/spsimpleportfolio/development-1/p7_600x600.jpg?);">
+                                        <div class="overlay">
+                                            <div class="btn-group-center">
+                                                <a href="#!" class="btn">ZOOM</a>
+                                                <a href="#!" class="btn">VIEW</a>
+                                            </div>
+                                            <a href="#!">Visualize impactful mindshare</a>
+                                            <div>Home</div>
                                         </div>
-                                        <a href="#!">Visualize impactful mindshare</a>
-                                        <div>Home</div>
                                     </div>
                                 </div>
                             </div>
                             <div class="col-xl-4 col-lg-6 col-md-12">
                                 <div class="image-container">
-                                    <div class="image" style="background-image: url(https://j4demo2.ltheme.com/joomla/lt-mypro/images/spsimpleportfolio/development-1/7_600x600.jpg#joomlaImage://local-images/spsimpleportfolio/development-1/7_600x600.jpg?);"></div>
-                                    <div class="overlay">
-                                        <div class="btn-group-center">
-                                            <a href="#!" class="btn">ZOOM</a>
-                                            <a href="#!" class="btn">VIEW</a>
+                                    <div class="image" style="background-image: url(https://j4demo2.ltheme.com/joomla/lt-mypro/images/spsimpleportfolio/development-1/7_600x600.jpg#joomlaImage://local-images/spsimpleportfolio/development-1/7_600x600.jpg?);">
+                                        <div class="overlay">
+                                            <div class="btn-group-center">
+                                                <a href="#!" class="btn">ZOOM</a>
+                                                <a href="#!" class="btn">VIEW</a>
+                                            </div>
+                                            <a href="#!">Enable value-added convergence</a>
+                                            <div>Office</div>
                                         </div>
-                                        <a href="#!">Enable value-added convergence</a>
-                                        <div>Office</div>
                                     </div>
                                 </div>
                             </div>
                             <div class="col-xl-4 col-lg-6 col-md-12">
                                 <div class="image-container">
-                                    <div class="image" style="background-image: url(https://j4demo2.ltheme.com/joomla/lt-mypro/images/spsimpleportfolio/web-design/p3_600x600.jpg#joomlaImage://local-images/spsimpleportfolio/web-design/p3_600x600.jpg?);"></div>
-                                    <div class="overlay">
-                                        <div class="btn-group-center">
-                                            <a href="#!" class="btn">ZOOM</a>
-                                            <a href="#!" class="btn">VIEW</a>
+                                    <div class="image" style="background-image: url(https://j4demo2.ltheme.com/joomla/lt-mypro/images/spsimpleportfolio/web-design/p3_600x600.jpg#joomlaImage://local-images/spsimpleportfolio/web-design/p3_600x600.jpg?);">
+                                        <div class="overlay">
+                                            <div class="btn-group-center">
+                                                <a href="#!" class="btn">ZOOM</a>
+                                                <a href="#!" class="btn">VIEW</a>
+                                            </div>
+                                            <a href="#!">Visualize vertical interfaces</a>
+                                            <div>Home</div>
                                         </div>
-                                        <a href="#!">Visualize vertical interfaces</a>
-                                        <div>Home</div>
                                     </div>
                                 </div>
                             </div> 
                             <div class="col-xl-4 col-lg-6 col-md-12">
                                 <div class="image-container">
-                                    <div class="image" style="background-image: url(https://j4demo2.ltheme.com/joomla/lt-mypro/images/spsimpleportfolio/seo-1/p4_600x600.jpg#joomlaImage://local-images/spsimpleportfolio/seo-1/p4_600x600.jpg?);"></div>
-                                    <div class="overlay">
-                                        <div class="btn-group-center">
-                                            <a href="#!" class="btn">ZOOM</a>
-                                            <a href="#!" class="btn">VIEW</a>
+                                    <div class="image" style="background-image: url(https://j4demo2.ltheme.com/joomla/lt-mypro/images/spsimpleportfolio/seo-1/p4_600x600.jpg#joomlaImage://local-images/spsimpleportfolio/seo-1/p4_600x600.jpg?);">
+                                        <div class="overlay">
+                                            <div class="btn-group-center">
+                                                <a href="#!" class="btn">ZOOM</a>
+                                                <a href="#!" class="btn">VIEW</a>
+                                            </div>
+                                            <a href="#!">Integrate clicks-and-mortar methodologies</a>
+                                            <div>Outdoor</div>
                                         </div>
-                                        <a href="#!">Integrate clicks-and-mortar methodologies</a>
-                                        <div>Outdoor</div>
                                     </div>
                                 </div>
                             </div>
                             <div class="col-xl-4 col-lg-6 col-md-12">
                                 <div class="image-container">
-                                    <div class="image" style="background-image: url(https://j4demo2.ltheme.com/joomla/lt-mypro/images/spsimpleportfolio/development-2/p5_600x600.jpg#joomlaImage://local-images/spsimpleportfolio/development-2/p5_600x600.jpg?);"></div>
-                                    <div class="overlay">
-                                        <div class="btn-group-center">
-                                            <a href="#!" class="btn">ZOOM</a>
-                                            <a href="#!" class="btn">VIEW</a>
+                                    <div class="image" style="background-image: url(https://j4demo2.ltheme.com/joomla/lt-mypro/images/spsimpleportfolio/development-2/p5_600x600.jpg#joomlaImage://local-images/spsimpleportfolio/development-2/p5_600x600.jpg?);">
+                                        <div class="overlay">
+                                            <div class="btn-group-center">
+                                                <a href="#!" class="btn">ZOOM</a>
+                                                <a href="#!" class="btn">VIEW</a>
+                                            </div>
+                                            <a href="#!">Streamline customized models</a>
+                                            <div>Outdoor</div>
                                         </div>
-                                        <a href="#!">Streamline customized models</a>
-                                        <div>Outdoor</div>
                                     </div>
                                 </div>
                             </div>
                             <div class="col-xl-4 col-lg-6 col-md-12">
                                 <div class="image-container">
-                                    <div class="image" style="background-image: url(https://j4demo2.ltheme.com/joomla/lt-mypro/images/spsimpleportfolio/web-design-1/p6_600x600.jpg#joomlaImage://local-images/spsimpleportfolio/web-design-1/p6_600x600.jpg?);"></div>
-                                    <div class="overlay">
-                                        <div class="btn-group-center">
-                                            <a href="#!" class="btn">ZOOM</a>
-                                            <a href="#!" class="btn">VIEW</a>
+                                    <div class="image" style="background-image: url(https://j4demo2.ltheme.com/joomla/lt-mypro/images/spsimpleportfolio/web-design-1/p6_600x600.jpg#joomlaImage://local-images/spsimpleportfolio/web-design-1/p6_600x600.jpg?);">
+                                        <div class="overlay">
+                                            <div class="btn-group-center">
+                                                <a href="#!" class="btn">ZOOM</a>
+                                                <a href="#!" class="btn">VIEW</a>
+                                            </div>
+                                            <a href="#!">Architect ubiquitous deliverables</a>
+                                            <div>Home</div>
                                         </div>
-                                        <a href="#!">Architect ubiquitous deliverables</a>
-                                        <div>Home</div>
                                     </div>
                                 </div>
                             </div>
@@ -611,7 +617,7 @@
                         <a href="!#" ><i class="fa-brands fa-dribbble"></i></a>
                     </div>
                     <div class="footer-inner">
-                        Copyright © <span class="orange">Free Joomla! 4 templates</span>  / Design by <span class="orange">LTheme</span>
+                        Copyright © <a href="!#"> Free Joomla! 4 templates</a> / Design by <a href="!#">LTheme</a>
                     </div>
                 </div>
             </div>
