--- a/20230622CuttingWeb/index.html
+++ b/20230622CuttingWeb/index.html
@@ -35,14 +35,47 @@
                                 <a href="#!" class="nav-link">CONTACT</a>
                             </li>
                         </ul>
-                        <a href="" class="menu-toggle">
+                        <a href="#offcanvas-menu" class="menu-toggle">
                             <span></span>
                             <span></span>
                             <span></span>
                         </a>
+                        
                     </div>     
                 </div>
             </div>
+            <div id="offcanvas-menu" style="z-index: 999;">
+                <ul id="popup-menu">
+                    <div class="brand">  
+                        <div class="image"></div>
+                        <a href="#!" class="close-btn">
+                            <span></span>
+                            <span></span>
+                        </a>
+                    </div>
+                    <div style="padding: 25px;">
+                        <input type="text" id="search" placeholder="Search...">
+                        <li class="nav-item">
+                            <a href="#!" class="nav-link">Home</a>
+                        </li>
+                        <li class="nav-item">
+                            <a href="#!" class="nav-link">Pages</a>
+                        </li>
+                        <li class="nav-item">
+                            <a href="#!" class="nav-link">Blog</a>
+                        </li>
+                        <li class="nav-item">
+                            <a href="#!" class="nav-link">User</a>
+                        </li>
+                        <li class="nav-item">
+                            <a href="#!" class="nav-link">Featyres</a>
+                        </li>
+                        <li class="nav-item">
+                            <a href="#!" class="nav-link">Contact</a>
+                        </li>   
+                    </div>
+                </ul>
+            </div>         
         </header>
         <!-- End header -->
 
@@ -94,7 +127,7 @@
                                             </p>
                                         </div>
                                     </div>
-                                    <a href="#! " class="btn btn-primary"><i class="fa fa-angle-right"></i>View More Project</a>
+                                    <a href="#! " class="btn btn-primary">View More Project</a>
                                 </div>
                             </div>
                         </div>
@@ -164,14 +197,16 @@
                         </div>
                         <div class="row">
                             <div class="col-xl-4 col-lg-12">
-                                <a href="#!">
-                                    <div class="services-preview">
-                                        <i class="fa fa-pencil-square-o"></i>
-                                        <h5>UI / UX Design</h5>
-                                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent pulvinar.</p>
-                                        <h2>01</h2>
-                                    </div>
-                                </a>
+                                <div class="services-card">
+                                    <a href="#!">
+                                        <div class="services-preview">
+                                            <i class="fa fa-pencil-square-o"></i>
+                                            <h5>UI / UX Design</h5>
+                                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent pulvinar.</p>
+                                            <h2>01</h2>
+                                        </div>
+                                    </a>
+                                </div> 
                             </div>
                             <div class="col-xl-4 col-lg-12">
                                 <a href="#!">
@@ -400,7 +435,7 @@
                             </ul>
                         </div>
                         <div class="row">
-                            <div class="col-xl-4 col-lg-6 col-md-12">
+                            <div class="col-xl-4 col-lg-6 col-sm-6 col-xs-12">
                                 <div class="image-container">
                                     <div class="image" style="background-image: url(https://j4demo2.ltheme.com/joomla/lt-mypro/images/spsimpleportfolio/development-1/p7_600x600.jpg#joomlaImage://local-images/spsimpleportfolio/development-1/p7_600x600.jpg?);">
                                         <div class="overlay">
@@ -414,7 +449,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="col-xl-4 col-lg-6 col-md-12">
+                            <div class="col-xl-4 col-lg-6 col-sm-6 col-xs-12">
                                 <div class="image-container">
                                     <div class="image" style="background-image: url(https://j4demo2.ltheme.com/joomla/lt-mypro/images/spsimpleportfolio/development-1/7_600x600.jpg#joomlaImage://local-images/spsimpleportfolio/development-1/7_600x600.jpg?);">
                                         <div class="overlay">
@@ -428,7 +463,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="col-xl-4 col-lg-6 col-md-12">
+                            <div class="col-xl-4 col-lg-6 col-sm-6 col-xs-12">
                                 <div class="image-container">
                                     <div class="image" style="background-image: url(https://j4demo2.ltheme.com/joomla/lt-mypro/images/spsimpleportfolio/web-design/p3_600x600.jpg#joomlaImage://local-images/spsimpleportfolio/web-design/p3_600x600.jpg?);">
                                         <div class="overlay">
@@ -442,7 +477,7 @@
                                     </div>
                                 </div>
                             </div> 
-                            <div class="col-xl-4 col-lg-6 col-md-12">
+                            <div class="col-xl-4 col-lg-6 col-sm-6 col-xs-12">
                                 <div class="image-container">
                                     <div class="image" style="background-image: url(https://j4demo2.ltheme.com/joomla/lt-mypro/images/spsimpleportfolio/seo-1/p4_600x600.jpg#joomlaImage://local-images/spsimpleportfolio/seo-1/p4_600x600.jpg?);">
                                         <div class="overlay">
@@ -456,7 +491,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="col-xl-4 col-lg-6 col-md-12">
+                            <div class="col-xl-4 col-lg-6 col-sm-6 col-xs-12">
                                 <div class="image-container">
                                     <div class="image" style="background-image: url(https://j4demo2.ltheme.com/joomla/lt-mypro/images/spsimpleportfolio/development-2/p5_600x600.jpg#joomlaImage://local-images/spsimpleportfolio/development-2/p5_600x600.jpg?);">
                                         <div class="overlay">
@@ -470,7 +505,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="col-xl-4 col-lg-6 col-md-12">
+                            <div class="col-xl-4 col-lg-6 col-sm-6 col-xs-12">
                                 <div class="image-container">
                                     <div class="image" style="background-image: url(https://j4demo2.ltheme.com/joomla/lt-mypro/images/spsimpleportfolio/web-design-1/p6_600x600.jpg#joomlaImage://local-images/spsimpleportfolio/web-design-1/p6_600x600.jpg?);">
                                         <div class="overlay">
@@ -624,6 +659,8 @@
         </footer>
         <!-- End footer -->
      </div>
-     <script src="https://kit.fontawesome.com/aaf75dbfe4.js" crossorigin="anonymous"></script>
 </body>
+<!-- JS -->
+<script src="https://kit.fontawesome.com/aaf75dbfe4.js" crossorigin="anonymous"></script>
+<script src="vendor/jquery/code.jquery.com_jquery-3.7.0.min.js"></script>
 </html>
