--- a/個人網站/index.html
+++ b/個人網站/index.html
@@ -24,7 +24,7 @@
                 <div class="offcanvas-inner">
                     <input type="text" id="search" placeholder="Search...">
                     <li class="nav-item">
-                        <a href="#!" class="nav-link">Home</a>
+                        <a href="#!" class="nav-link">YE Desing|個人網站</a>
                     </li>
                     <li class="nav-item">
                         <a href="#about" class="nav-link">About</a>
