--- a/個人網站/index.html
+++ b/個人網站/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home</title>
+    <title>YE Desing|個人網站</title>
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/style.css">
 </head>
@@ -24,7 +24,7 @@
                 <div class="offcanvas-inner">
                     <input type="text" id="search" placeholder="Search...">
                     <li class="nav-item">
-                        <a href="#!" class="nav-link">YE Desing|個人網站</a>
+                        <a href="#!" class="nav-link">Home</a>
                     </li>
                     <li class="nav-item">
                         <a href="#about" class="nav-link">About</a>
